@@ -4,7 +4,10 @@
 
 %h2.text-center.mb-3 Security Log
 
-%p.mb-5.text-center Review the access to your account
+%p.mb-5.text-center
+  Review the access to your account
+  %br
+    %small (last 100 actions)
 
 .row
   .col-lg-10.offset-lg-1.col-xl-8.offset-xl-2
